# dolboebify

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yml  publish.yml  test.yml
src/dolboebify/: __init__.py  __main__.py
src/dolboebify/core/: __init__.py  player.py
src/dolboebify/gui/: __init__.py  qt_app.py
src/dolboebify/ui/: __init__.py  cli.py
src/dolboebify/utils/: __init__.py  cleanup.py  config.py  coverart.py  exceptions.py  fileutils.py
tests/: __init__.py  test_coverart.py  test_player.py  test_track_image.py
