[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dolboebify"
version = "0.0.1"
authors = [
    {name = "relaxxx89", email = "stepaefimov@gmail.com"},
]
description = "A modern GUI audio player supporting various audio formats"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-vlc>=3.0.18120",
    "pygame>=2.5.0",
    "pydub>=0.25.1",
    "PyQt5>=5.15.0",
    "requests>=2.28.0",
]

[project.scripts]
dolboebify = "dolboebify.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 79
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88 